# vh-wsp

./: .gitignore  README-DEV.md  README.md  Taskfile.yml  agents.md  docker-compose.yml  env.dev  nginx-dev.conf  wsp.code-workspace
analysis/: analyze_country_email.py  analyze_married_couples.py  common.py  pyproject.toml  report.md  report_married.md  requirements.txt
replica/: README.md  Taskfile.yml  manifest.txt
scripts/: cancel_memberships.sh  dev-clean.sh  dev-setup.sh
