[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Edo Shor",email = "edoshor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=1.5.0)",
    "sqlalchemy (>=1.4.0)",
    "pymysql (>=1.0.0)",
    "psycopg2-binary (>=2.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
